--- a/src/components/best-reasons.astro
+++ b/src/components/best-reasons.astro
@@ -1,10 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
+import Container from "./container.astro";
 ---
 
 <!-- Best Reasons To Choose Shout -->
 <section class="pt-16 pb-16">
-  <div class="mb-12">
+  <Container>
+    <div class="mb-12">
     <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">Best Reasons To Choose Shout</h2>
     <p class="text-lg mt-4 text-gray-600">
       Turning your data into actionable insight has never been easier. Our intuitive tools are loved by millions of users, all over the world.
@@ -64,4 +66,5 @@ import { Icon } from "astro-icon/components";
       <p class="text-gray-700 italic">"Shout offers multiple options for customization. Moreover, our projects look perfect on any device. If you want a platform that does most of the work for you, including automatic reporting, go with Shout."</p>
     </div>
   </div>
+  </Container>
 </section>
