--- a/src/components/customer-logos.astro
+++ b/src/components/customer-logos.astro
@@ -1,16 +1,17 @@
 ---
+import Container from "./container.astro";
 ---
 
-<div class="py-16">
-  <p class="text-center text-slate-600 max-w-2xl mx-auto">Organizations all over the world use Shout to improve customer and employee experiences.</p>
-  <div class="flex gap-4 md:gap-8 lg:gap-12 xl:gap-16 items-center justify-center mt-10 overflow-x-auto md:overflow-visible">
-
-    <img src="/images/2024/04/Bullhorn-Color.svg" alt="Bullhorn" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
-    <img src="/images/2024/04/Dominos-Color.svg" alt="Dominos" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
-    <img src="/images/2024/04/Pepsico-Color.svg" alt="PepsiCo" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
-    <img src="/images/2024/04/Pinterest-Full-Color.svg" alt="Pinterest" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
-    <img src="/images/2024/04/Indeed-Color.svg" alt="Indeed" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
-    <img src="/images/2024/04/NHS-Color.svg" alt="NHS" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
-
-  </div>
-</div>
+<section class="py-16">
+  <Container>
+    <p class="text-center text-slate-600 max-w-2xl mx-auto">Organizations all over the world use Shout to improve customer and employee experiences.</p>
+    <div class="flex gap-4 md:gap-8 lg:gap-12 xl:gap-16 items-center justify-center mt-10 overflow-x-auto md:overflow-visible">
+      <img src="/images/2024/04/Bullhorn-Color.svg" alt="Bullhorn" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
+      <img src="/images/2024/04/Dominos-Color.svg" alt="Dominos" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
+      <img src="/images/2024/04/Pepsico-Color.svg" alt="PepsiCo" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
+      <img src="/images/2024/04/Pinterest-Full-Color.svg" alt="Pinterest" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
+      <img src="/images/2024/04/Indeed-Color.svg" alt="Indeed" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
+      <img src="/images/2024/04/NHS-Color.svg" alt="NHS" class="h-8 md:h-12 w-auto opacity-70 hover:opacity-100 transition-opacity" />
+    </div>
+  </Container>
+</section>
