--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,6 +1,7 @@
 ---
 // @ts-ignore
 import { Icon } from "astro-icon/components";
+import Container from "./container.astro";
 
 const features = [
   {
@@ -42,27 +43,31 @@ const features = [
 ];
 ---
 
-<div class="pt-16">
-  <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Integrated solutions for every need
-  </h2>
-  <p class="text-lg mt-4 text-slate-600">
-    With Shout, you can do more than create surveys. Perform assessments, capture leads, and manage experiences. All with your compliance in mind.
-  </p>
-</div>
+<section class="pt-16 pb-16">
+  <Container>
+    <div class="mb-12">
+      <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
+        Integrated solutions for every need
+      </h2>
+      <p class="text-lg mt-4 text-slate-600">
+        With Shout, you can do more than create surveys. Perform assessments, capture leads, and manage experiences. All with your compliance in mind.
+      </p>
+    </div>
 
-<div class="grid sm:grid-cols-2 md:grid-cols-3 mt-16 pb-16 gap-16">
-  {
-    features.map((item) => (
-      <div class="flex gap-4 items-start">
-        <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
-          <Icon class="text-white" name={item.icon} />
-        </div>
-        <div>
-          <h3 class="font-semibold text-lg">{item.title}</h3>{" "}
-          <p class="text-slate-500 mt-2 leading-relaxed">{item.description}</p>
-        </div>
-      </div>
-    ))
-  }
-</div>
+    <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-16">
+      {
+        features.map((item) => (
+          <div class="flex gap-4 items-start">
+            <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
+              <Icon class="text-white" name={item.icon} />
+            </div>
+            <div>
+              <h3 class="font-semibold text-lg">{item.title}</h3>{" "}
+              <p class="text-slate-500 mt-2 leading-relaxed">{item.description}</p>
+            </div>
+          </div>
+        ))
+      }
+    </div>
+  </Container>
+</section>
