--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,17 @@ import CTA from "../components/cta.astro";
   title="Shout: Safeguard Your Data with Privacy-First Survey Software"
   description="Collect feedback, improve experiences and perform assessments in a secure and compliant app. Start your Free Trial with Shout today."
 >
-  <Container>
-    <Hero />
-    <Features />
-    <CustomerLogos />
-    <CTA />
-  </Container>
+  <section class="py-16">
+    <Container>
+      <Hero />
+    </Container>
+  </section>
+  <Features />
+  <CustomerLogos />
+  <section class="py-16">
+    <Container>
+      <CTA />
+    </Container>
+  </section>
 </AstroshipLayout>
 
